helmes/src/main/java/com/test/helmes/errors/InvalidDataException.java
package com.test.helmes.errors;

public class InvalidDataException extends Exception {
    public InvalidDataException(String message) {
        super(message);
    }
}
